splitting off bbw css from h5bp css. workin on header.
trying to maintain some semblance of structural agreement with the main
site (e.g. using same sprites and classes).

--- a/index.html
+++ b/index.html
@@ -13,16 +13,21 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/h5bp.css">
+        <link rel="stylesheet" href="css/bbw.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
-    <body>
+    <body class="dark_layout">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div id="logo">
+			<a href="http://www.businessweek.com/" class="ir" id="home_link">Bloomberg Businessweek</a>
+			<h2 id="channel_name">
+				<a href="http://www.twitter.com/bizweekgraphics">Graphics</a>
+			</h2>
+		</div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
