workin on formatting #channel_name. added webfonts.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,46 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
+		
+		
+		<!-- * font definitions */ -->
+		<style>
+		  @font-face {
+			font-family: 'BloombergLBold';
+			  src: url("http://www.businessweek.com/assets/type/bloombergl_heavy.eot?#iefix") format('embedded-opentype'),
+				   url('http://www.businessweek.com/assets/type/bloombergl_heavy.ttf') format('truetype');
+			  font-weight: bold;
+			  font-style: normal;
+		  }
+		  @font-face {
+			font-family:'BWHaasHead';
+			src: url('http://www.businessweek.com/assets/type/hinted/haas/bwhaasgroteskhead-95black.eot?#iefix') format('eot'),
+				 url('http://www.businessweek.com/assets/type/hinted/haas/bwhaasgroteskhead-95black.woff') format('woff'),
+				 url('http://www.businessweek.com/assets/type/haas/bwhaasgroteskhead-95black.ttf') format('truetype');
+  
+			font-style: normal;
+			font-weight: 700;
+			font-stretch: normal;
+		  }
+		  @font-face {
+			font-family:'BWHaasHead75Bold';
+			src: url('http://www.businessweek.com/assets/type/hinted/haas75/bwhaasgroteskhead-75bold.eot?#iefix') format('eot'),
+				 url('http://www.businessweek.com/assets/type/hinted/haas75/bwhaasgroteskhead-75bold.woff') format('woff'),
+				 url('http://www.businessweek.com/assets/type/haas75/bwhaasgrotesktext-75bold.ttf') format('truetype');
+			font-style: normal;
+			font-weight: 700;
+			font-stretch: normal;
+		  }
+		  @font-face {
+			font-family:'BWHaasRegular';
+			src: url('http://www.businessweek.com/assets/web_fonts/bwhaasgroteskhead-65medium.eot?#iefix') format('eot'),
+				 url('http://www.businessweek.com/assets/web_fonts/bwhaasgroteskhead-65medium.woff') format('woff'),
+				 url('http://www.businessweek.com/assets/web_fonts/bwhaasgrotesktext-65medium.ttf') format('truetype');
+			font-style: normal;
+			font-weight: 700;
+			font-stretch: normal;
+		  }
+		</style>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/h5bp.css">
         <link rel="stylesheet" href="css/bbw.css">
