--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <link rel="stylesheet" href="css/bbw.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
-    <body class="dark_layout">
+    <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -65,6 +65,8 @@
 				<a href="http://www.twitter.com/bizweekgraphics">Graphics</a>
 			</h2>
 		</div>
+		
+		<!--<iframe width="100%" height="675" frameborder="0" scrolling="no" src="http://www.businessweek.com/graphics/2014_bwg_bitcoin/index.html"></iframe>-->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
