--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		
+		<link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
+		<link href="apple-touch-icon-precomposed.png" rel="apple-touch-icon" type="image/png" />
 		
 		<!-- * font definitions */ -->
 		<style>
@@ -54,7 +56,14 @@
         <link rel="stylesheet" href="css/bbw.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
-    <body>
+    
+    <!--
+    Body classes:
+    .iframed		//no interface wrapping, no margins
+    .dark_layout	//like bbw video site
+    -->
+    
+    <body class="">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
