--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 		</div>
 		
 		<!--<iframe width="100%" height="675" frameborder="0" scrolling="no" src="http://www.businessweek.com/graphics/2014_bwg_bitcoin/index.html"></iframe>-->
-
+		
+		<script src="js/vendor/d3.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
