drawArrow() is working beautifully :)
a little high school geometry did the trick. next step is to have it
accept objects as `from` and `to` and draw arrows between the corners
of the bounding rects.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+		<svg id="svg-canvas">
+		
+		<defs>
+			<!-- arrowhead for arrows -->
+			<marker id = "arrowhead" viewBox = "-10 -10 20 20" refX = "0" refY = "0" markerWidth = "20" markerHeight = "20" stroke-width = "1" orient = "auto">
+				<polyline stroke-linejoin="bevel" points="-6.72,-6.749 0.54,0 -6.72,6.749 "/>
+			</marker>
+		</defs>
+		
+		</svg>
 
         <div id="logo">
 			<a href="http://www.businessweek.com/" class="ir" id="home_link">Bloomberg Businessweek</a>
@@ -74,6 +84,7 @@
 				<a href="http://www.twitter.com/bizweekgraphics">Graphics</a>
 			</h2>
 		</div>
+		
 		
 		<!--<iframe width="100%" height="675" frameborder="0" scrolling="no" src="http://www.businessweek.com/graphics/2014_bwg_bitcoin/index.html"></iframe>-->
 		
