--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<defs>
 				<!-- arrowhead for arrows -->
 				<marker id = "arrowhead" viewBox = "-10 -10 20 20" refX = "0" refY = "0" markerWidth = "20" markerHeight = "20" stroke-width = "1" orient = "auto">
-					<polyline stroke-linejoin="bevel" points="-6.72,-6.749 0.54,0 -6.72,6.749 "/>
+					<polyline class="arrow" stroke-linejoin="bevel" points="-6.72,-6.749 0.54,0 -6.72,6.749 "/>
 				</marker>
 			</defs>
 		</svg>
