fixing arrow positioning for .fullscreen
problem was introduced when i moved `<svg>` below #logo and
div.clearfix. #todo: fix positioning for svg:not(.fullscreen)

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
     <div class="clearfix"></div>
     
-    <svg id="svg-canvas">
+    <svg id="svg-canvas" class="fullscreen">
       <defs>
         <!-- arrowhead for arrows -->
         <marker id = "arrowhead" viewBox = "-10 -10 20 20" refX = "0" refY = "0" markerWidth = "20" markerHeight = "20" stroke-width = "1" orient = "auto">
