--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ font-family:BWHaasRegular
   <h3 class="hed">Graphic title</h3>
   <p class="dek">This is dek, different from the dek you are at now. I am typing the sound of my dek and I repeating and repeating the dek dek dek TK sound of my speaking voice.</p>
 
-  <div id="test" style="position:absolute;left:250px;top:360px;width:20px;height:30px;background:yellow;"></div>
+  <div id="test" style="position:absolute;left:250px;top:360px;width:20px;height:30px;background:#0ff;"></div>
+  <div id="cursor" style="position:absolute;width:5px;height:5px;background:#f0f;"></div>
 
   <svg id="svg-canvas" class="fullscreen">
     <defs>
