--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@ font-family:BWHaasRegular
   <h3 class="hed">Graphic title</h3>
   <p class="dek">This is dek, different from the dek you are at now. I am typing the sound of my dek and I repeating and repeating the dek dek dek TK sound of my speaking voice.</p>
 
-  <div id="test" style="position:absolute;left:250px;top:360px;width:20px;height:30px;background:#0ff;"></div>
-  <div id="cursor" style="position:absolute;width:5px;height:5px;background:#f0f;"></div>
-
   <svg id="svg-canvas" class="fullscreen">
     <defs>
       <!-- arrowhead for arrows -->
@@ -58,6 +55,8 @@ font-family:BWHaasRegular
         <polyline class="arrow" stroke-linejoin="bevel" points="-6.72,-6.749 0.54,0 -6.72,6.749 "/>
       </marker>
     </defs>
+    
+    <circle cx="240" cy="150" r="50" fill="#000000"/>
   </svg>
 
   <div class="data-credit">Graphic by Bloomberg Businessweek. Data: compiled by Bloomberg</div>
