new function bbwNumberFormatLog(dolla)
as used in fixthis-bigdata.

also, uh, added a square. cuz it demos border-snapping better.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@ font-family:BWHaasRegular
         <polyline class="arrow" stroke-linejoin="bevel" points="-6.72,-6.749 0.54,0 -6.72,6.749 "/>
       </marker>
     </defs>
-    
+
     <circle cx="240" cy="150" r="50" fill="#000000"/>
+
+    <rect x="400" y="500" width="50" height="50" fill="#000000"/>
   </svg>
 
   <div class="data-credit">Graphic by Bloomberg Businessweek. Data: compiled by Bloomberg</div>
