--- a/index.html
+++ b/index.html
@@ -69,5 +69,18 @@ font-family:BWHaasRegular
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
+  <script>
+    //////////////////////////////////////////////////////////////////////////////////////////
+    // DEMO CODE // (remove at will) /////////////////////////////////////////////////////////
+    //////////////////////////////////////////////////////////////////////////////////////////
+
+    // draw sample arrow from page element to cursor
+    var mouseArrow = drawArrow(d3.select("#svg-canvas"), d3.select("rect"), [300,300], 120, true);
+    $(document).on("mousemove", function(e) {
+      mouseArrow.remove();
+      mouseArrow = drawArrow(d3.select("#svg-canvas"), d3.select("rect"), [e.pageX,e.pageY], 20, true);
+    });
+  </script>
+
 </body>
 </html>
