marking demo svg. gotta be a better way of maintaining "clean" and "demo" boilerplates.

--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@ font-family:BWHaasRegular
       </marker>
     </defs>
 
+    <!-- DEMO DRAWINGS -->
     <circle cx="240" cy="150" r="50" fill="#000000"/>
-
     <rect x="400" y="500" width="50" height="50" fill="#000000"/>
+    <!-- END DEMO DRAWINGS -->
+
   </svg>
 
   <div class="data-credit">Graphic by Bloomberg Businessweek. Data: compiled by Bloomberg</div>
