ok well drawArrow() isn't workin very well here. is it bc of the transforms? hits right x-coord but way high (i.e. low on page) on y-coord
but selecting the deepwater horizon label and knocking it a little
off-kilter works!

--- a/reusable.html
+++ b/reusable.html
@@ -78,6 +78,11 @@ font-family:BWHaasRegular
       .height(500);
   d3.tsv("data/totalspills.tsv", function(data) {
     d3.select("#barchart").datum(data).call(barChart);
+    d3.select('[data-annotation="Deepwater Horizon"] text')
+      .attr("transform", "rotate(-20)")
+      .attr("dx","-30")
+      .attr("dy","-10");
+
     d3.select("#bar-zoom").on("click",function() {
         barChart.yDomain([0,2e7]);
         d3.select("#barchart")
@@ -86,6 +91,7 @@ font-family:BWHaasRegular
             .call(barChart);
     });
     d3.select("#bar-auto").on("click",function() {
+        drawArrow(d3.select(".chart.bar"), d3.select('[data-x="2005"] rect'), [0,0], 30, true);
         barChart.yDomain("auto");
         d3.select("#barchart")
             .datum(data)
